fix: update dependencies

--- a/package.json
+++ b/package.json
@@ -7,55 +7,56 @@
   "dependencies": {
     "@oclif/config": "^1.17.0",
     "@oclif/errors": "^1.3.4",
-    "@salesforce/command": "^3.1.0",
-    "@salesforce/dev-scripts": "^0.9.1",
-    "@salesforce/kit": "^1.5.0",
+    "@salesforce/command": "^3.1.3",
+    "@salesforce/kit": "^1.5.14",
     "boxen": "^5.0.1",
     "chalk": "^4.1.1",
-    "cli-ux": "^5.5.1",
+    "cli-ux": "^5.6.2",
     "debug": "^4.3.1",
     "is-npm": "^5.0.0",
-    "oclif-plugin-update-notifier": "^1.3.0",
-    "patch-package": "^6.4.7",
+    "oclif-plugin-update-notifier": "^1.3.1",
     "semver": "^7.3.5",
-    "tslib": "^2.2.0",
+    "tslib": "^2.3.0",
     "update-notifier": "5.1.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.1.1",
-    "@commitlint/config-conventional": "^12.1.1",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@oclif/dev-cli": "^1.26.0",
     "@oclif/plugin-help": "^3.2.2",
     "@oclif/test": "^1.2.8",
-    "@salesforce/dev-config": "^2.1.0",
+    "@salesforce/dev-config": "^2.1.2",
+    "@salesforce/dev-scripts": "^0.9.15",
     "@salesforce/prettier-config": "^0.0.2",
-    "@types/chai": "^4.2.16",
+    "@types/chai": "^4.2.19",
+    "@types/jsforce": "^1.9.30",
     "@types/mocha": "^8.2.2",
-    "@types/node": "^14.14.41",
-    "@types/sinon": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@types/node": "^15.12.4",
+    "@types/sinon": "^10.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "chai": "^4.3.4",
-    "eslint": "^7.24.0",
-    "eslint-config-prettier": "^8.2.0",
-    "eslint-config-salesforce": "^0.1.0",
-    "eslint-config-salesforce-license": "^0.1.0",
-    "eslint-config-salesforce-typescript": "^0.2.0",
+    "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-salesforce": "^0.1.6",
+    "eslint-config-salesforce-typescript": "^0.2.7",
     "eslint-plugin-header": "^3.1.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsdoc": "^32.3.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsdoc": "^35.4.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "globby": "^11.0.3",
+    "globby": "^11.0.4",
     "husky": "^6.0.0",
     "is-ci": "^3.0.0",
-    "mocha": "^8.3.2",
+    "mocha": "^9.0.1",
     "nyc": "^15.1.0",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0",
-    "sinon": "^10.0.0",
+    "patch-package": "^6.4.7",
+    "pinst": "^2.1.6",
+    "prettier": "^2.3.1",
+    "pretty-quick": "^3.1.1",
+    "sinon": "^11.1.1",
     "source-map-support": "^0.5.19",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.4",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.4",
     "xunit-file": "^1.0.0"
   },
   "engines": {
@@ -96,18 +97,19 @@
     "clean": "sf-clean",
     "clean-all": "sf-clean all",
     "compile": "sf-compile",
-    "docs": "sf-docs",
     "format": "sf-format",
     "lint": "sf-lint",
     "lint-fix": "sf-lint --fix",
     "postcompile": "oclif-dev manifest && oclif-dev readme",
     "postinstall": "patch-package",
-    "postpack": "rm -f oclif.manifest.json",
-    "prepack": "sf-build",
+    "postpack": "rimraf oclif.manifest.json",
+    "postpublish": "pinst --enable",
+    "prepack": "sf-prepack",
+    "prepare": "is-ci || husky install",
+    "prepublishOnly": "pinst --disable",
     "pretest": "sf-compile-test",
     "test": "sf-test",
-    "version": "oclif-dev manifest && oclif-dev readme && git add README.md oclif.manifest.json",
-    "prepare": "is-ci || husky install"
+    "version": "oclif-dev manifest && oclif-dev readme"
   },
   "release": {
     "branches": [
