--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,18 +49,18 @@ jobs:
       - run: *test
       - run: *coverage
       - save_cache: *save-cache
-  node-12:
+  node-14:
     <<: *node-test
     docker:
-      - image: node:12.18.3
+      - image: node:14.17.1
   release:
     <<: *defaults
     steps:
       - checkout
       - restore_cache: *restore-cache
       - run: *gh-config
-      - run: yarn global add semantic-release@17
-      - run: yarn global add @oclif/semantic-release@3
+      - run: npm install -global semantic-release@17
+      - run: npm install -global https://github.com/jayree/semantic-release
       - run: *install
       - run: semantic-release -e @oclif/semantic-release
       - save_cache: *save-cache
@@ -84,15 +84,20 @@ workflows:
   'sfdx-plugin-update-notifier':
     jobs:
       - node-latest
-      - node-12
+      - node-14
       - release:
           filters:
-            branches: { only: main }
+            branches:
+              only:
+                - main
+                - next
           requires:
             - node-latest
-            - node-12
+            - node-14
       - merge:
           filters:
-            branches: { only: main }
+            branches:
+              only:
+                - main
           requires:
             - release
