--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "extends": "@salesforce/dev-config/tsconfig",
   "compilerOptions": {
-    "outDir": "lib"
+    "outDir": "lib",
+    "esModuleInterop": true,
+    "module": "node16",
+    "moduleResolution": "node16"
   },
   "include": ["./src/**/*.ts"]
 }
