fix: update dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "outDir": "lib",
     "esModuleInterop": true,
     "module": "node16",
-    "moduleResolution": "node16"
+    "moduleResolution": "node16",
+    "skipLibCheck": true
   },
   "include": ["./src/**/*.ts"]
 }
