--- a/package.json
+++ b/package.json
@@ -6,61 +6,60 @@
   "type": "module",
   "bugs": "https://github.com/jayree/sfdx-plugin-update-notifier/issues",
   "dependencies": {
-    "@oclif/core": "^1.16.5",
-    "@salesforce/kit": "^1.7.0",
+    "@oclif/core": "^1.21.0",
+    "@salesforce/kit": "^1.8.0",
     "debug": "^4.3.4",
-    "fs-extra": "^10.1.0",
-    "marked": "^4.1.1",
+    "fs-extra": "^11.1.0",
+    "marked": "^4.2.4",
     "marked-terminal": "^5.1.1",
-    "oclif-plugin-update-notifier": "^1.5.1",
+    "oclif-plugin-update-notifier": "^1.5.3",
     "semver": "^7.3.8",
-    "tslib": "^2.4.0"
+    "tslib": "^2.4.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
-    "@oclif/plugin-command-snapshot": "^3.1.3",
-    "@oclif/plugin-help": "^5.1.12",
-    "@oclif/test": "^2.1.1",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
+    "@oclif/plugin-command-snapshot": "^3.2.12",
+    "@oclif/plugin-help": "^5.1.20",
+    "@oclif/test": "^2.2.15",
     "@salesforce/dev-config": "^3.1.0",
     "@salesforce/dev-scripts": "^3.1.0",
     "@salesforce/prettier-config": "^0.0.2",
-    "@types/chai": "^4.3.3",
+    "@types/chai": "^4.3.4",
     "@types/debug": "^4.1.7",
     "@types/fs-extra": "^9.0.13",
-    "@types/jsforce": "^1.9.43",
-    "@types/marked": "^4.0.7",
+    "@types/jsforce": "^1.11.0",
+    "@types/marked": "^4.0.8",
     "@types/marked-terminal": "^3.1.3",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^18.7.18",
-    "@types/semver": "^7.3.12",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.11.16",
+    "@types/semver": "^7.3.13",
     "@types/sinon": "^10.0.13",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
-    "chai": "^4.3.6",
-    "eslint": "^8.23.1",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
+    "chai": "^4.3.7",
+    "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-salesforce": "^1.1.0",
     "eslint-config-salesforce-typescript": "^1.1.1",
     "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.3.6",
+    "eslint-plugin-jsdoc": "^39.6.4",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-sf-plugin": "^1.1.0",
-    "husky": "^8.0.1",
+    "eslint-plugin-sf-plugin": "^1.2.1",
+    "husky": "^8.0.2",
     "is-ci": "^3.0.1",
-    "mocha": "^10.0.0",
+    "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "oclif": "^3.2.2",
-    "patch-package": "^6.4.7",
+    "oclif": "^3.4.2",
+    "patch-package": "^6.5.0",
     "pinst": "^3.0.0",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.1",
     "pretty-quick": "^3.1.3",
-    "sinon": "^14.0.0",
+    "sinon": "^15.0.1",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.3",
-    "xunit-file": "^2.0.0"
+    "typescript": "^4.9.4"
   },
   "engines": {
     "node": ">=14.0.0"
