--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
   "type": "module",
   "bugs": "https://github.com/jayree/sfdx-plugin-update-notifier/issues",
   "dependencies": {
+    "@jayree/changelog": "^1.1.1",
     "@oclif/core": "^2.8.5",
     "@salesforce/kit": "^1.9.0",
     "debug": "^4.3.4",
     "fs-extra": "^11.1.0",
-    "marked": "^4.3.0",
-    "marked-terminal": "^5.1.1",
     "oclif-plugin-update-notifier": "^1.5.23",
-    "semver": "^7.3.8",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
@@ -29,11 +27,8 @@
     "@types/debug": "^4.1.7",
     "@types/fs-extra": "^11.0.1",
     "@types/jsforce": "^1.11.0",
-    "@types/marked": "^4.0.8",
-    "@types/marked-terminal": "^3.1.3",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.16.4",
-    "@types/semver": "^7.3.13",
     "@types/sinon": "^10.0.14",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
