--- a/.sfdevrc.json
+++ b/.sfdevrc.json
@@ -1,6 +1,5 @@
 {
-  "test": {
-    "testsPath": "test/**/*test.ts"
-  },
-  "exclude-scripts": ["docs"]
+  "exclude-scripts": ["docs", "test:command-reference", "test:compile", "test:only"],
+  "exclude-files": ["LICENSE.txt", ".eslintrc.js", "test/.eslintrc.js"],
+  "strict": true
 }
