--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-salesforce": "^2.0.2",
-    "eslint-config-salesforce-license": "^0.2.0",
     "eslint-config-salesforce-typescript": "^1.1.2",
     "eslint-plugin-header": "^3.1.1",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-jsdoc": "^46.4.6",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-sf-plugin": "^1.15.6",
     "husky": "^8.0.3",
     "is-ci": "^3.0.1",
     "mocha": "^10.2.0",
