--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/jsforce": "^1.11.5",
     "c8": "^10.1.3",
+    "eslint-config-salesforce-license": "^1.0.2",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-sf-plugin": "^1.20.32",
     "is-ci": "^4.1.0",
