--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   "keywords": [
     "sfdx-plugin"
   ],
-  "license": "BSD-3-Clause",
+  "license": "Apache-2.0",
   "oclif": {
     "bin": "sfdx",
     "hooks": {
@@ -80,6 +80,7 @@
     "clean-all": "sf-clean all",
     "compile": "wireit",
     "docs": "sf-docs",
+    "fix-license": "eslint src test --fix --rule \"header/header: [2]\"",
     "format": "wireit",
     "lint": "wireit",
     "postpack": "sf-clean --ignore-signing-artifacts",
